--- a/src/index.scss
+++ b/src/index.scss
@@ -394,7 +394,7 @@ nav ul li a:hover  {
 div.hero {
   height: 35rem;
   background-color: #b4c6f0;
-  background-image: url('/public/bg.png');
+  background-image: url('../public/bg.png');
   background-size: 800px;
   background-repeat: no-repeat;
   background-position: center bottom;
